# xamgu-QSS-loader

./: CMakeLists.txt  README.md
Demo/: QssLoaderDemoApp.cpp  QssLoaderDemoApp.h  QssLoaderDemoApp.qrc  QssLoaderDemoApp.ui  main.cpp
Demo/Resources/StyleSheets/: DemoAppDarkTheme.qsse  DemoAppLightTheme.qsse  DemoAppStyleSheet.qsse  StyleSheetExampleDefs.qsse
Source/: QsseFileLoader.cpp  QsseFileLoader.h
